--- a/lib/ruff/ruff_guide.adoc
+++ b/lib/ruff/ruff_guide.adoc
@@ -294,9 +294,9 @@ Some sample output from Ruff! can be seen at
 
 * link:ruff.html[Ruff! reference manual] - the reference manual for Ruff! itself
 
-* link:woof-ug/woof_manual.html[Woof! reference manual] - reference manual for
+* link:woof-ug/html/_woof/woof_manual.html[Woof! reference manual] - reference manual for
 the link:index.html[Woof! framework] illustrating output for TclOO classes
 
-* http://www.posoft.de/download/extensions/Cawt/CawtReference-1.0.3.html[CAWT reference manual] - reference manual for the 
+* http://www.posoft.de/download/extensions/Cawt/CawtReference-1.2.0.html[CAWT reference manual] - reference manual for the 
 http://www.posoft.de/html/extCawt.html[COM Automation with Tcl] package
 from Paul Obermeier
